# james_complypoint

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: multi_estate.yaml  run_config.yaml  run_config_homebuy.yaml  run_config_win95.yaml  schema.yaml
config/classification/: base.yaml  weights.yaml
config/retention/: housing.yaml
docs/: configuration-guide.docx  setup.docx
scripts/: analyse_folders.py  analyse_schemes.py  analyse_tokens.py  cluster_report.py  cluster_review.py  duplicate_report.py  entity_report.py  folder_entity_analysis.py  folder_tree.py  jsonl_to_csv.py  jsonl_to_csv_slim.py  leaf_folders.py  merge_homebuy.py  scheme_report.py
src/: main.py
src/classification/: __init__.py  address_extractor.py  config_loader.py  duplicate_detector.py  engine.py  entity_cluster.py  entity_extractor.py  filename_analyser.py  folder_analyser.py  fuzzy.py  matcher.py  models.py  plot_extractor.py  retention.py  scheme_detector.py  scheme_extractor.py  scorer.py  similarity.py  tokeniser.py
src/ingestion/: filters.py  normaliser.py  path_parser.py  reader.py  schema.py
tests/: conftest.py  test_address_extractor.py  test_config_loader.py  test_entity_cluster.py  test_entity_extractor.py  test_filename_analyser.py  test_filters.py  test_folder_analyser.py  test_fuzzy.py  test_hierarchy_enforcement.py  test_matcher.py  test_path_parser.py  test_plot_extractor.py  test_reader_xml.py  test_schema.py  test_scheme_detector.py  test_scheme_extractor.py  test_scorer.py  test_similarity.py  test_tokeniser.py
(+2 files in other folders)
